# Universe

./: CMakeLists.txt
src/: main.cpp
src/Graphics/: general.h
src/Graphics/Buffer/: EBO.h  VAO.h  VBO.h
src/Graphics/Shader/: default.frag  shader.h
src/Math/: arithmetics.h  trig.h  vector.h
src/Physics/: classical.h
src/Simulation/: environment.h  particle.h  wall.h
